# nba-data-platform

./: .gitattributes  .gitignore  README.md  pyproject.toml  readme.md  run schedule.py  run.py
.degraded/Drivers/: ScheduleDriver.py
.tests/: generate_unit_test_data.py  run-unit_test.py  run_stats_api.py
.tests/scoreboard/: todaysScoreboard_00-03_sb_SubComplete.json  todaysScoreboard_00-05_sb_Halftime.json  todaysScoreboard_00-06_sb_2ndHalf.json  todaysScoreboard_00-07_sb_Complete.json
config/: api_map.py  settings.py
connectors/: api_data.py  sql.py  static_data.py
dags/: daily_lineups.py  league_dash_advanced_metrics.py  league_dash_api_pipeline.py  league_dash_hustle.py  league_dash_play_type.py  league_dash_tracking.py  nba__live_pipeline.py  nba_pipeline.py  nba_schedule_backfill_pipeline.py  nba_schedule_pipeline.py  player_position_pipeline.py
docs/: advanced_metrics_pipeline.md
misc/: On Court view.sql  adv.PlayerBox.sql
nba_pipeline.egg-info/: SOURCES.txt  top_level.txt
pipelines/: __init__.py  advanced_stats.py  base.py  boxscore.py  daily_lineups.py  league_dash_api.py  playbyplay.py  player_positions.py  schedule.py  schedule_api_usage.py  scoreboard.py
scripts/: run schedule.py  run.py  run_api_new.py  run_league_dash_api.py  run_stats_api.py
sql/: __init__.py
sql/queries/: pbp_backfill.sql  schedule_for_api_usage.sql
tests/: run_stats_api.py
transforms/: stint_processor.py  transform_api_data.py  transform_boxscore.py  transform_daily_lineups.py  transform_data.py  transform_playbyplay.py  transform_stints.py
(+76 files in other folders)
