[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pandas",
    "sqlalchemy",
    "pyodbc",
    "requests",
    "colorlog",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["config*", "connectors*", "pipelines*", "transforms*", "sql*", "docs*"]
